[package]
name = "grouping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
csv = "1.1.6"
rusqlite = "0.28.0"
serde = { version = "1.0.147", features = ["derive"] }
